--- a/Mobile/android/app/src/main/res/values/strings.xml
+++ b/Mobile/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">HES Kısayol</string>
+    <string name="app_name">Web Health Checker</string>
 </resources>
